Made plotAcc subroutine more generalised.

--- a/esn_feedback.ipynb
+++ b/esn_feedback.ipynb
@@ -1312,7 +1312,7 @@
         "        outL_tr[n]=np.copy(np.array(loss.to('cpu').detach()))\n",
         "        outA_trTa[n]=np.copy(np.array(accTrTa.to('cpu').detach()))\n",
         "        outA_trClCe[n]=np.copy(np.array(accTrClCe.to('cpu').detach()))\n",
-        "        \n",
+        "                \n",
         "        ### Validation data\n",
         "        with torch.no_grad():\n",
         "            # Prepare batch\n",
@@ -1416,6 +1416,9 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "###\n",
+        "### Test run\n",
+        "###\n",
         "swLR = 0.001#0.00046 # Sweep over these learning rates\n",
         "seed = 11117 # No. runs per hyperparameter\n",
         "\n",
