Fixed layer index bug when initialising optimiser for transfer learning

--- a/esn_feedback.ipynb
+++ b/esn_feedback.ipynb
@@ -567,7 +567,7 @@
         "\n",
         "    def transferOptimiser(self):\n",
         "        \n",
-        "        self.tranOpt=optim.Adam([{ 'params': self.Ws[self.maxLayer:]+self.bs[self.maxLayer:], 'lr':self.etaTransfer }])\n",
+        "        self.tranOpt=optim.Adam([{ 'params': self.Ws[(self.maxLayer-1):]+self.bs[(self.maxLayer-1):], 'lr':self.etaTransfer }])\n",
         "        \n",
         "    def Forward(self):\n",
         "\n",
@@ -826,7 +826,7 @@
         "            A_valClCe[n]=np.copy(np.array(accValClCe.to('cpu').detach()))\n",
         "\n",
         "        # Update learning rate\n",
-        "        MOD.iniOpt.param_groups[0]['lr'] = par.eta * np.exp(-float(n)/par.eta_tau)\n",
+        "        MOD.iniOpt.param_groups[0]['lr'] = par.etaInitial * np.exp(-float(n)/par.eta_tau)\n",
         "\n",
         "        if (n%par.reportTime==0) and (n>0):\n",
         "            print(f'Time per stage: {time.time()-t}')\n",
@@ -911,9 +911,27 @@
         "        outA_trTa[n]=np.copy(np.array(accTrTa.to('cpu').detach()))\n",
         "        outA_trClCe[n]=np.copy(np.array(accTrClCe.to('cpu').detach()))\n",
         "        \n",
-        "        # Print gradient for multiple layers\n",
-        "        with torch.no_grad():\n",
-        "            print(f'Grad L-2: {MOD.Ws[-2].grad.mean()},     Grad L-1: {MOD.Ws[-1].grad.mean()}')\n",
+        "        # # Print delta_W for multiple layers\n",
+        "        # if (n%save_every)<1:\n",
+        "        #     with torch.no_grad():\n",
+        "        #         # Save before weights\n",
+        "        #         w1 = []\n",
+        "        #         for k in range(par.maxLayer):\n",
+        "        #             w1.append(torch.clone(MOD.Ws[k].data))\n",
+        "        #         if par.fbLayer:\n",
+        "        #             w1.append(torch.clone(MOD.W_fb.data))\n",
+        "        # if ((n-1)%save_every)<1:\n",
+        "        #     with torch.no_grad():\n",
+        "        #         # Save after weights\n",
+        "        #         w2 = []\n",
+        "        #         for k in range(par.maxLayer):\n",
+        "        #             w2.append(torch.clone(MOD.Ws[k].data))\n",
+        "        #         if par.fbLayer:\n",
+        "        #             w2.append(torch.clone(MOD.W_fb.data))\n",
+        "        #         # Compute weight change\n",
+        "        #         for k in range(len(w1)):\n",
+        "        #             dw = torch.abs(torch.subtract(w2[k],w1[k])).cpu()\n",
+        "        #             print(f'Max dW[{k}] = {dw[k].max()}')\n",
         "            \n",
         "        ### Validation data\n",
         "        with torch.no_grad():\n",
@@ -936,7 +954,7 @@
         "            outA_valClCe[n] = np.copy(np.array(accValClCe.to('cpu').detach()))\n",
         "\n",
         "        # Update learning rate\n",
-        "        MOD.tranOpt.param_groups[0]['lr'] = par.eta * np.exp(-float(n)/par.eta_tau)\n",
+        "        MOD.tranOpt.param_groups[0]['lr'] = par.etaTransfer * np.exp(-float(n)/par.eta_tau)\n",
         "\n",
         "        if (n%par.reportTime==0) and (n>0):\n",
         "            print(f'Time per stage: {time.time()-t}')\n",
@@ -1055,7 +1073,7 @@
         "\n",
         "    def transferOptimiser(self):\n",
         "        \n",
-        "        self.tranOpt=optim.Adam([{ 'params': self.Ws[self.maxLayer:]+self.bs[self.maxLayer:], 'lr':self.etaTransfer }])\n",
+        "        self.tranOpt=optim.Adam([{ 'params': self.Ws[(self.maxLayer-1):]+self.bs[(self.maxLayer-1):], 'lr':self.etaTransfer }])\n",
         "        \n",
         "    def Forward(self):\n",
         "\n",
@@ -1193,7 +1211,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 79,
+      "execution_count": null,
       "id": "f140603c",
       "metadata": {},
       "outputs": [],
@@ -1374,7 +1392,7 @@
         "            A_valClCe[n]=np.copy(np.array(accValClCe.to('cpu').detach()))\n",
         "\n",
         "        # Update learning rate\n",
-        "        MOD.metOpt.param_groups[0]['lr'] = par.eta * np.exp(-float(n)/par.eta_tau)\n",
+        "        MOD.metOpt.param_groups[0]['lr'] = par.etaInitial * np.exp(-float(n)/par.eta_tau)\n",
         "\n",
         "        if (n%par.reportTime==0) and (n>0):\n",
         "            print(f'Time per stage: {time.time()-t}')\n",
@@ -1455,9 +1473,27 @@
         "        outA_trTa[n]=np.copy(np.array(accTrTa.to('cpu').detach()))\n",
         "        outA_trClCe[n]=np.copy(np.array(accTrClCe.to('cpu').detach()))\n",
         "        \n",
-        "        # Print gradient for multiple layers\n",
-        "        with torch.no_grad():\n",
-        "            print(f'Grad L-2: {MOD.Ws[-2].grad.mean()},     Grad L-1: {MOD.Ws[-1].grad.mean()}')\n",
+        "        # Print delta_W for multiple layers\n",
+        "        if (n%save_every)<1:\n",
+        "            with torch.no_grad():\n",
+        "                # Save before weights\n",
+        "                w1 = []\n",
+        "                for k in range(par.maxLayer):\n",
+        "                    w1.append(torch.clone(MOD.Ws[k].data))\n",
+        "                if par.fbLayer:\n",
+        "                    w1.append(torch.clone(MOD.W_fb.data))\n",
+        "        if ((n-1)%save_every)<1:\n",
+        "            with torch.no_grad():\n",
+        "                # Save after weights\n",
+        "                w2 = []\n",
+        "                for k in range(par.maxLayer):\n",
+        "                    w2.append(torch.clone(MOD.Ws[k].data))\n",
+        "                if par.fbLayer:\n",
+        "                    w2.append(torch.clone(MOD.W_fb.data))\n",
+        "                # Compute weight change\n",
+        "                for k in range(len(w1)):\n",
+        "                    dw = torch.abs(torch.subtract(w2[k],w1[k])).cpu()\n",
+        "                    print(f'Max dW[{k}] = {dw[k].max()}')\n",
         "            \n",
         "        ### Validation data\n",
         "        with torch.no_grad():\n",
@@ -1567,11 +1603,11 @@
         "# Update hyperparameter\n",
         "importlib.reload(par)\n",
         "par.etaInitial = swLR\n",
-        "par.etaTransfer = 1.0\n",
+        "par.etaTransfer = 0.001\n",
         "par.fbLayer = 2\n",
         "par.saveFlag_FBWeights = True\n",
-        "par.nEpochs = 200\n",
-        "par.nEpisodesOut = 200\n",
+        "par.nEpochs = 1000\n",
+        "par.nEpisodesOut = 1000\n",
         "par.maxLayer = 3\n",
         "par.lossLayer = 3\n",
         "par.nSaveMaxT = par.nEpochs \n",
@@ -2123,9 +2159,9 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python [conda env:venv] *",
+      "display_name": "venv",
       "language": "python",
-      "name": "conda-env-venv-py"
+      "name": "python3"
     },
     "language_info": {
       "codemirror_mode": {
@@ -2138,11 +2174,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.8.16"
-    },
-    "vscode": {
-      "interpreter": {
-        "hash": "6ca3cabd64c821540d03c27655fd3203d564282a95e64fe84544566440549db9"
-      }
     }
   },
   "nbformat": 4,
