Added debug checks to make sure correct layer was being optimised during transfer learning

--- a/esn_feedback.ipynb
+++ b/esn_feedback.ipynb
@@ -844,6 +844,8 @@
         "    ###############################\n",
         "    #### Second phase of training\n",
         "    ###############################\n",
+        "    print('**********************START TRANSFER TRAINING')\n",
+        "    \n",
         "    # Init memory to save responses\n",
         "    resp_saveind = 0\n",
         "    if par.saveFlag_RESP:\n",
@@ -855,9 +857,6 @@
         "    MOD.Ws[-1] = nn.Parameter((torch.randn([MOD.Ns[-2],MOD.Ns[-1]])/torch.sqrt(torch.tensor(MOD.Ns[-2]+MOD.Ns[-1]))).to(device))\n",
         "    MOD.bs[-1] = nn.Parameter(torch.zeros([MOD.Ns[-1]]).to(device))\n",
         "\n",
-        "    ### Initialise optimiser\n",
-        "    MOD.transferOptimiser()\n",
-        "\n",
         "    ### Init memory for saving data\n",
         "    outL_tr=np.zeros([par.nEpisodesOut])\n",
         "    outA_trTa=np.zeros([par.nEpisodesOut])\n",
@@ -866,9 +865,12 @@
         "    outA_valTa=np.zeros([par.nEpisodesOut])\n",
         "    outA_valClCe=np.zeros([par.nEpisodesOut])\n",
         "\n",
-        "    print('**********************START TRANSFER TRAINING')\n",
         "    MOD.maxLayer = len(MOD.Ns)-1\n",
         "    MOD.lossLayer = MOD.maxLayer\n",
+        "\n",
+        "    ### Initialise optimiser\n",
+        "    MOD.transferOptimiser()\n",
+        "    \n",
         "    t=time.time()\n",
         "\n",
         "    for n in range(par.nEpisodesOut):\n",
@@ -1052,13 +1054,11 @@
         "        self.bs=[]\n",
         "        \n",
         "        self.Ns=par.Ns\n",
-        "        self.numW = 0 # Total number of feedforward weights\n",
+        "        \n",
         "        for n in range(1,np.shape(self.Ns)[0]):\n",
         "        \n",
         "            self.Ws.append(nn.Parameter((torch.randn([self.Ns[n-1],self.Ns[n]])/torch.sqrt(torch.tensor(self.Ns[n-1]+self.Ns[n]))).to(device)))\n",
         "            self.bs.append(nn.Parameter(torch.zeros([self.Ns[n]]).to(device)))\n",
-        "\n",
-        "            self.numW += float(torch.numel(self.Ws[n-1]))\n",
         "        \n",
         "        if par.fbLayer:\n",
         "            self.fbLayer = par.fbLayer\n",
@@ -1073,6 +1073,9 @@
         "\n",
         "    def transferOptimiser(self):\n",
         "        \n",
+        "        print(f'Length of weights: {len(self.Ws)}')\n",
+        "        print(f'Length of ouput layer weights: {len(self.Ws[(self.maxLayer-1):])}')\n",
+        "        print(f'maxLayer: {self.maxLayer}')\n",
         "        self.tranOpt=optim.Adam([{ 'params': self.Ws[(self.maxLayer-1):]+self.bs[(self.maxLayer-1):], 'lr':self.etaTransfer }])\n",
         "        \n",
         "    def Forward(self):\n",
@@ -1084,7 +1087,7 @@
         "\n",
         "        self.x = []\n",
         "        for n in range(0,len(self.Ns)): # For each layer\n",
-        "            self.x.append(torch.zeros(nSamples, self.Ns[n], requires_grad=False))\n",
+        "            self.x.append(torch.zeros(nSamples, self.Ns[n], requires_grad=True))\n",
         "\n",
         "    def ESN_1step(self, s, t):\n",
         "        if t>0:\n",
@@ -1211,7 +1214,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 49,
       "id": "f140603c",
       "metadata": {},
       "outputs": [],
@@ -1346,17 +1349,17 @@
         "            with torch.no_grad():\n",
         "                # Save before weights\n",
         "                w1 = []\n",
-        "                for k in range(par.maxLayer):\n",
+        "                for k in range(MOD.maxLayer):\n",
         "                    w1.append(torch.clone(MOD.Ws[k].data))\n",
-        "                if par.fbLayer:\n",
+        "                if MOD.fbLayer:\n",
         "                    w1.append(torch.clone(MOD.W_fb.data))\n",
         "        if par.saveFlag_DW and ((n-1)%save_every)<1:\n",
         "            with torch.no_grad():\n",
         "                # Save after weights\n",
         "                w2 = []\n",
-        "                for k in range(par.maxLayer):\n",
+        "                for k in range(MOD.maxLayer):\n",
         "                    w2.append(torch.clone(MOD.Ws[k].data))\n",
-        "                if par.fbLayer:\n",
+        "                if MOD.fbLayer:\n",
         "                    w2.append(torch.clone(MOD.W_fb.data))\n",
         "                # Compute weight change\n",
         "                for k in range(len(w1)):\n",
@@ -1410,15 +1413,14 @@
         "    ###############################\n",
         "    #### Second phase of training\n",
         "    ###############################\n",
+        "    print('**********************START TRANSFER TRAINING')\n",
+        "    \n",
         "    # Init memory to save responses\n",
         "    resp_saveind = 0\n",
         "    if par.saveFlag_RESP:\n",
         "        outRESP = []\n",
         "        for layer in range(par.maxLayer+1,len(MOD.Ns)):\n",
         "            outRESP.append(np.zeros((len(par.saveRespAtN)+1, par.nClass * par.nSaveSamples, par.Ns[layer], tMax))) \n",
-        "\n",
-        "    ### Initialise optimiser\n",
-        "    MOD.transferOptimiser()\n",
         "\n",
         "    ### Init memory for saving data\n",
         "    outL_tr=np.zeros([par.nEpisodesOut])\n",
@@ -1428,9 +1430,12 @@
         "    outA_valTa=np.zeros([par.nEpisodesOut])\n",
         "    outA_valClCe=np.zeros([par.nEpisodesOut])\n",
         "\n",
-        "    print('**********************START TRANSFER TRAINING')\n",
         "    MOD.maxLayer = len(MOD.Ns)-1\n",
         "    MOD.lossLayer = MOD.maxLayer\n",
+        "\n",
+        "    ### Initialise optimiser\n",
+        "    MOD.transferOptimiser()\n",
+        "\n",
         "    t=time.time()\n",
         "\n",
         "    for n in range(par.nEpisodesOut):\n",
@@ -1468,32 +1473,32 @@
         "        #####\n",
         "        #####\n",
         "\n",
-        "        # Store loss and accuracy\n",
-        "        outL_tr[n]=np.copy(np.array(loss.to('cpu').detach()))\n",
-        "        outA_trTa[n]=np.copy(np.array(accTrTa.to('cpu').detach()))\n",
-        "        outA_trClCe[n]=np.copy(np.array(accTrClCe.to('cpu').detach()))\n",
+        "        # # Store loss and accuracy\n",
+        "        # outL_tr[n]=np.copy(np.array(loss.to('cpu').detach()))\n",
+        "        # outA_trTa[n]=np.copy(np.array(accTrTa.to('cpu').detach()))\n",
+        "        # outA_trClCe[n]=np.copy(np.array(accTrClCe.to('cpu').detach()))\n",
         "        \n",
-        "        # Print delta_W for multiple layers\n",
-        "        if (n%save_every)<1:\n",
-        "            with torch.no_grad():\n",
-        "                # Save before weights\n",
-        "                w1 = []\n",
-        "                for k in range(par.maxLayer):\n",
-        "                    w1.append(torch.clone(MOD.Ws[k].data))\n",
-        "                if par.fbLayer:\n",
-        "                    w1.append(torch.clone(MOD.W_fb.data))\n",
-        "        if ((n-1)%save_every)<1:\n",
-        "            with torch.no_grad():\n",
-        "                # Save after weights\n",
-        "                w2 = []\n",
-        "                for k in range(par.maxLayer):\n",
-        "                    w2.append(torch.clone(MOD.Ws[k].data))\n",
-        "                if par.fbLayer:\n",
-        "                    w2.append(torch.clone(MOD.W_fb.data))\n",
-        "                # Compute weight change\n",
-        "                for k in range(len(w1)):\n",
-        "                    dw = torch.abs(torch.subtract(w2[k],w1[k])).cpu()\n",
-        "                    print(f'Max dW[{k}] = {dw[k].max()}')\n",
+        "        # # Print delta_W for multiple layers\n",
+        "        # if (n%save_every)<1:\n",
+        "        #     with torch.no_grad():\n",
+        "        #         # Save before weights\n",
+        "        #         w1 = []\n",
+        "        #         for k in range(MOD.maxLayer):\n",
+        "        #             w1.append(torch.clone(MOD.Ws[k].data))\n",
+        "        #         if MOD.fbLayer:\n",
+        "        #             w1.append(torch.clone(MOD.W_fb.data))\n",
+        "        # if ((n-1)%save_every)<1:\n",
+        "        #     with torch.no_grad():\n",
+        "        #         # Save after weights\n",
+        "        #         w2 = []\n",
+        "        #         for k in range(MOD.maxLayer):\n",
+        "        #             w2.append(torch.clone(MOD.Ws[k].data))\n",
+        "        #         if MOD.fbLayer:\n",
+        "        #             w2.append(torch.clone(MOD.W_fb.data))\n",
+        "        #         # Compute weight change\n",
+        "        #         for k in range(len(w1)):\n",
+        "        #             dw = torch.abs(torch.subtract(w2[k],w1[k])).cpu()\n",
+        "        #             print(f'Max dW[{k}] = {dw[k].max()}')\n",
         "            \n",
         "        ### Validation data\n",
         "        with torch.no_grad():\n",
@@ -1608,12 +1613,12 @@
         "par.saveFlag_FBWeights = True\n",
         "par.nEpochs = 1000\n",
         "par.nEpisodesOut = 1000\n",
-        "par.maxLayer = 3\n",
-        "par.lossLayer = 3\n",
+        "par.maxLayer = 2\n",
+        "par.lossLayer = 2\n",
         "par.nSaveMaxT = par.nEpochs \n",
         "expName = 'test'\n",
-        "xent_esn_fb(expName, seed)\n",
-        "# metric_esn_fb(expName, seed)"
+        "# xent_esn_fb(expName, seed)\n",
+        "metric_esn_fb(expName, seed)"
       ]
     },
     {
@@ -1645,7 +1650,7 @@
       "outputs": [],
       "source": [
         "### Define parameters\n",
-        "swLR = np.logspace(-5,-7/3,9) # Sweep over these learning rates\n",
+        "swLR = np.logspace(-5,-7/3,7) # Sweep over these learning rates\n",
         "nSeeds = 5 # No. runs per hyperparameter\n",
         "seeds = list(sp.primerange(11111,33333))[0:nSeeds] # RNG seeds\n",
         "\n",
@@ -1734,7 +1739,7 @@
       "outputs": [],
       "source": [
         "### Define parameters\n",
-        "swLR = np.logspace(-5,-7/3,9) # Sweep over these learning rates\n",
+        "swLR = np.logspace(-5,-7/3,7) # Sweep over these learning rates\n",
         "nSeeds = 5 # No. runs per hyperparameter\n",
         "seeds = list(sp.primerange(11111,33333))[0:nSeeds] # RNG seeds\n",
         "\n",
@@ -1749,7 +1754,7 @@
         "        np.random.default_rng(sd)\n",
         "        # Update hyperparameter\n",
         "        importlib.reload(par)\n",
-        "        par.etaMet = swLR[j]\n",
+        "        par.etaInitial = swLR[j]\n",
         "        par.fbLayer = 2\n",
         "        par.saveFlag_FBWeights = False if not par.fbLayer else True \n",
         "        expName = 'metFB2_swLR_'+str(j)\n",
@@ -1772,7 +1777,7 @@
         "        np.random.default_rng(sd)\n",
         "        # Update hyperparameter\n",
         "        importlib.reload(par)\n",
-        "        par.etaMet = swLR[j]\n",
+        "        par.etaInitial = swLR[j]\n",
         "        par.fbLayer = 1\n",
         "        par.saveFlag_FBWeights = False if not par.fbLayer else True \n",
         "        expName = 'metFB1_swLR_'+str(j)\n",
@@ -1795,7 +1800,7 @@
         "        np.random.default_rng(sd)\n",
         "        # Update hyperparameter\n",
         "        importlib.reload(par)\n",
-        "        par.etaMet = swLR[j]\n",
+        "        par.etaInitial = swLR[j]\n",
         "        par.fbLayer = []\n",
         "        par.saveFlag_FBWeights = False if not par.fbLayer else True \n",
         "        expName = 'metFB0_swLR_'+str(j)\n",
@@ -2159,9 +2164,9 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "venv",
+      "display_name": "Python [conda env:venv] *",
       "language": "python",
-      "name": "python3"
+      "name": "conda-env-venv-py"
     },
     "language_info": {
       "codemirror_mode": {
